fixed hero section margins on mobile

--- a/css/hero.css
+++ b/css/hero.css
@@ -1,4 +1,5 @@
 #hero {
+    border: 2px solid red;
     display: flex;
     justify-content: space-between;
     height: 95lvh;
@@ -177,8 +178,8 @@
         max-height: 802px;
         align-items: center;
         flex-direction: column;
-        transform: translateY(0px);
-        margin-bottom: 130px;
+        transform: translateY(-50px);
+        margin-bottom: 80px;
     }
     
     #hero-left { width: 100%; }
