--- a/css/work.css
+++ b/css/work.css
@@ -1,3 +1,7 @@
+#work {
+    border: 2px solid red;
+}
+
 /* iPad Pro 11" Portrait */
 @media (max-width: 970px) {
 
